trunk/Archive2/08/0e05ce8577e3f5/output
main.cpp:1:1: error: expected unqualified-id
|| make: Nothing to be done for `all'.
^
main.cpp:1:37: warning: missing terminating ' character [-Winvalid-pp-token]
|| make: Nothing to be done for `all'.
                                    ^
1 warning and 1 error generated.
